--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
             <version>5.11.0-M2</version>
             <scope>test</scope>
         </dependency>
+        <!-- Logging framework -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.16</version>
+        </dependency>
     </dependencies>
 
     <build>
